# cosmophone

./: README.md
Module docs/embassy-hello-world/: Cargo.toml  README.md  app_desc.x  export-esp.ps1
Module docs/embassy-hello-world/.cargo/: config.toml
Module docs/embassy-hello-world/src/: main.rs
